fix: menu bug on Safari

--- a/src/components/unstyled/menu.css
+++ b/src/components/unstyled/menu.css
@@ -5,7 +5,7 @@
   }
   :where(li:not(.menu-title) > *:not(ul):not(details):not(.menu-title)),
   :where(li:not(.menu-title) > details > summary:not(.menu-title)) {
-    @apply grid grid-flow-col items-center gap-2;
+    @apply grid grid-flow-col items-center gap-2 content-start;
     grid-auto-columns: max-content auto max-content;
     user-select: none;
   }
